--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,11 +7,26 @@ html
     = csrf_meta_tags
 
   body
-    h1 Sentwitter
+    div class='container'
+      = nav_bar
 
-    = form_for [@tweet_search] do |f|
-      = f.text_field :full_text, nil: false,
-                                 placeholder: 'type your search in here'
-      = f.submit value: "Search for tweets", class: 'btn btn-primary'
+
+        h1 Sentwitter
+
+        = form_for [@tweet_search],html: {class:"navbar-form"} do |f|
+          div class="form-group"
+            = f.text_field :full_text, nil: false, placeholder: 'type your search in here', class:"form-control"
+
+          = button_tag(type: 'submit', class: 'btn btn-default') do
+            span class="glyphicon glyphicon-search"
+
+      div class="proxy-settings col-lg-2"
+        = form_for :proxy_setting do |f|
+          div class="form-group"
+            = f.text_field :host, placeholder: 'host', class: 'form-control'
+            = f.text_field :port, placeholder: 'port', class: 'form-control'
+            = f.text_field :username, placeholder: 'username', class: 'form-control'
+            = f.password_field :password, placeholder: 'password', class: 'form-control'
+            = f.submit class: 'btn btn-default'
 
     == yield
