--- a/app/views/tweet_searches/create.html.slim
+++ b/app/views/tweet_searches/create.html.slim
@@ -7,7 +7,7 @@ div#results
         th = "#"
         th = "nom"
         th = "tweet"
-        th = "classe"
+        th = "annotation"
     - @results.take(10).each_with_index do |tweet, index|
   	  tbody
   	    tr
@@ -16,6 +16,7 @@ div#results
           td.text = tweet.text
           td
             select
+              option -1
               option 0
               option 1
-              option -1
+              option 2
