--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,9 @@ html
       = nav_bar
 
 
-        h1 Sentwitter
+        h1
+          = link_to "Sentwitter", root_path
+        span
+          = link_to "tweets", tweets_path
 
     == yield
