--- a/app/views/tweet_searches/index.html.slim
+++ b/app/views/tweet_searches/index.html.slim
@@ -1,6 +1,6 @@
-h2 Liste des recherches enregistrées
+h2 class="text-center" Liste des précédentes recherches
 
-table class="table table-striped table bordered"
+table class="tweets table table-striped table bordered"
   thead
     tr
       td id
