--- a/app/views/tweets/index.html.slim
+++ b/app/views/tweets/index.html.slim
@@ -1,5 +1,6 @@
 = will_paginate @tweets
 
+h2 class="text-center" Liste des tweets en base
 table class="tweets table table-striped table-bordered"
   thead
     tr
