--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,10 +1,10 @@
 = form_for [@tweet_search],html: {class:"navbar-form"} do |f|
   div class="panel panel-primary"
   	div class="panel-heading"
-  		h2 class="text-center panel-title" Search for Tweet
+  		h2 class="text-center panel-title" Rechercher des Tweets
   	div class="panel-body text-center"
-  		p Type your search in the text field
-    	= f.text_field :full_text, nil: false, placeholder: 'Ex : frites, bières', class:"form-control"
+  		p Taper une recherche dans le champs ci-dessous :
+    	= f.text_field :full_text, nil: false, placeholder: 'Ex : frites, bières, ...etc', class:"form-control"
 
   		= button_tag(type: 'submit', class: 'btn btn-default') do
     		span class="glyphicon glyphicon-search"
