--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,11 +15,11 @@ html
 
         ul class ='nav nav-pills'
           li class='active'
-            = link_to "Home", root_path
+            = link_to "Accueil", root_path
           li
             = link_to "Tweets", tweets_path
           li
-            = link_to "Previous Searches", tweet_searches_path
+            = link_to "Recherches Précédentes", tweet_searches_path
 
     == yield
 
