--- a/app/views/tweet_searches/show.html.slim
+++ b/app/views/tweet_searches/show.html.slim
@@ -5,7 +5,7 @@ h2 Présentation de la recherche #{@tweet_search.full_text}
 div
   table class="tweets table table-striped table-bordered"
    thead
-     tr
+     tr class="text-center"
        td 
        	b id
        td 
