--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,8 +3,18 @@
   	div class="panel-heading"
   		h2 class="text-center panel-title" Rechercher des Tweets
   	div class="panel-body text-center"
-  		p Taper une recherche dans le champs ci-dessous :
-    	= f.text_field :full_text, nil: false, placeholder: 'Ex : frites, bières, ...etc', class:"form-control"
-
-  		= button_tag(type: 'submit', class: 'btn btn-default') do
+      p Taper une recherche dans le champs ci-dessous :
+      = f.text_field :full_text, nil: false, placeholder: 'Ex : frites, bières, ...etc', class:"form-control"
+      p Choisir un nombre de tweet maximum à enregistrer
+      = f.number_field :tweet_amount, class:"form-control"
+      p Lancer la recherche
+      = button_tag(type: 'submit', class: 'btn btn-default') do
     		span class="glyphicon glyphicon-search"
+
+  div class="panel panel-primary"
+    div class="panel-heading"
+      h2 class="text-center panel-title" Exporter des Tweets
+    div class="panel-body text-center"
+      p Selectionner la recherche que vous voulez exporter en CSV
+      
+      
