Interface Graphique : Analyses

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -20,7 +20,7 @@
 // Reset and dependencies
 @import "twitter/bootstrap/normalize.less";
 @import "twitter/bootstrap/print.less";
-//@import "twitter/bootstrap/glyphicons.less"; // Excludes glyphicons
+// @import "twitter/bootstrap/glyphicons.less"; // Excludes glyphicons
 
 // Core CSS
 @import "twitter/bootstrap/scaffolding.less";
@@ -64,7 +64,7 @@
 @import "twitter/bootstrap/utilities.less";
 @import "twitter/bootstrap/responsive-utilities.less";
 // Glyphicons
-//@import "twitter/bootstrap/glyphicons.less";
+@import "twitter/bootstrap/glyphicons.less";
 
 // Your custom LESS stylesheets goes here
 //
