--- a/app/views/tweet_searches/show.html.slim
+++ b/app/views/tweet_searches/show.html.slim
@@ -1,4 +1,4 @@
-h2 Présentation de la recherche #{@tweet_search.full_text}
+h2 class="text-center" Présentation de la recherche : #{@tweet_search.full_text}
 
 = will_paginate @tweets
 
