--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,8 +5,8 @@
   	div class="panel-body text-center"
       p Taper une recherche dans le champs ci-dessous :
       = f.text_field :full_text, nil: false, placeholder: 'Ex : frites, bières, ...etc', class:"form-control"
-      p Choisir un nombre de tweet maximum à enregistrer
-      = f.number_field :tweet_amount, class:"form-control"
+      p Choisir un nombre de tweet maximum à enregistrer :
+      = f.number_field :tweet_amount, step: 50, min: 0, class:"form-control"
       p Lancer la recherche
       = button_tag(type: 'submit', class: 'btn btn-default') do
     		span class="glyphicon glyphicon-search"
