--- a/app/views/tweet_analysis/show.html.slim
+++ b/app/views/tweet_analysis/show.html.slim
@@ -1,11 +1,14 @@
-= javascript_include_tag "//www.google.com/jsapi", "chartkick"
+= javascript_include_tag "javascripts/chart.js", "chartkick"
+
 h2 class="text-center" Analyse du sujet : #{@tweet_search.full_text} 
 h3 class="text-center" #{@tweet_analysis.type}
+
+br
 
 div class ="col-xs-6"
   div class="panel panel-primary"
    div class="panel-heading"
-     h2 class="text-center panel-title" Résultat d'analyse : 
+     h2 class="text-center panel-title" Résultat d'analyse
    div class="panel-body text-center"
      p Diagramme Camembert
      = pie_chart [["Tweets Positifs", @tweet_analysis.positive_tweets], ["Tweets Neutres", @tweet_analysis.neutral_tweets], ["Tweets Negatifs", @tweet_analysis.negative_tweets]]
@@ -13,8 +16,16 @@ div class ="col-xs-6"
 div class ="col-xs-6"
   div class="panel panel-primary"
    div class="panel-heading"
-     h2 class="text-center panel-title" Résultat d'analyse : 
+     h2 class="text-center panel-title" Résultat d'analyse
    div class="panel-body text-center"
      p Diagramme Baton
      = bar_chart [["Tweets Positifs", @tweet_analysis.positive_tweets], ["Tweets Neutres", @tweet_analysis.neutral_tweets], ["Tweets Negatifs", @tweet_analysis.negative_tweets]]
 
+div class ="col-xs-12"
+  div class="panel panel-primary"
+   div class="panel-heading"
+     h2 class="text-center panel-title" Détails
+   div class="panel-body text-center"
+     p <b>Identifiant de recherche :</b> #{@tweet_search.id} | <b>Nom de la recherche :</b> #{@tweet_search.full_text}
+     p <b>Date de la recherche :</b> #{@tweet_search.updated_at}
+     p <b>Type d'analyse :</b> #{@tweet_analysis.type} | <b>Total de tweets analysés :</b> #{(@tweet_analysis.neutral_tweets + @tweet_analysis.positive_tweets + @tweet_analysis.negative_tweets)}
