--- a/app/views/tweet_searches/index.html.slim
+++ b/app/views/tweet_searches/index.html.slim
@@ -23,7 +23,18 @@ table class="tweets table table-striped table bordered"
       td
        = tweet_search.tweets.count
       td
-       = link_to "KeywordAnalysis", tweet_analysis_path(tweet_search)
+       .dropdown
+          button.dropdown-toggle data-toggle="dropdown" class="btn btn-default"
+            span Types
+            span.caret
+          ul.dropdown-menu role="menu" 
+            li
+              = link_to "KeywordAnalysis", tweet_analysis_path(tweet_search)
+            li
+              a href="#"  KnnAnalysis
+            li
+              a href="#"  BayesAnalysis
+       
       td
        = button_tag(type: 'submit', class: 'btn btn-primary')
          span export
