--- a/app/views/tweet_searches/show.html.slim
+++ b/app/views/tweet_searches/show.html.slim
@@ -14,6 +14,8 @@ div
        	b contenu
        td 
        	b annotation
+       td
+        b annotation à la main
      - @tweets.each do |tweet|
       == render 'tweet', tweet: tweet
 
