--- a/app/views/tweet_searches/index.html.slim
+++ b/app/views/tweet_searches/index.html.slim
@@ -29,11 +29,9 @@ table class="tweets table table-striped table bordered"
             span.caret
           ul.dropdown-menu role="menu" 
             li
-              = link_to "KeywordAnalysis", tweet_analysis_path(tweet_search)
+              = link_to "KeywordAnalysis", tweet_analysis_index_path(tweet_analysis: {tweet_search_id: tweet_search.id, type: "KeywordAnalysis"}), method: :post
             li
-              a href="#"  KnnAnalysis
-            li
-              a href="#"  BayesAnalysis
+              = link_to "KnnAnalysis", tweet_analysis_index_path(tweet_analysis: {tweet_search_id: tweet_search.id, type: "KnnAnalysis"}), method: :post
        
       td
        = button_tag(type: 'submit', class: 'btn btn-primary')
